--- a/index.html
+++ b/index.html
@@ -9,22 +9,28 @@
     <p>Lớp 12A5</p>
     <p>Trường THPT Tân An</p>
     <h2><b>Sở thích</b></h2>
-    <ol style="I">
+    <ol tyle="I">
       <li style="color:red">Xem Phim</li>
+      <ul style="list-style-type:disc">
       <dt>
           <li><a href="https://phuongyuti.github.io/tp/">Thể loại</a></li>
       </dt>
+      </ul>
       <li style="color:green">Chơi Game</li>
+      <ul style="list-style-type:disc">
          <dt>
            <li>Liên Minh Huyền Thoại</li>
            <p><img src="https://photo2.tinhte.vn/data/attachment-files/2024/09/8449326_lol2-1692422783297148423145.jpg"></p>
          </dt>
+      </ul>
       <li>Ca sĩ yêu thích và bài hát thích nhất</li>
+      <ul style="list-style-type:disc">
       <dt>
         <li><a href="https://vi.wikipedia.org/wiki/V%C5%A9_(ca_s%C4%A9)">Vũ.</a></li>
         <li><a href="https://www.youtube.com/watch?v=h6RONxjPBf4">Những lời hứa bỏ quên</a></li>
       </dt>
+      </ul>
       <li>Video cảm thấy hay nhất</li>
-      <video src="6119475630666364910.mp4">
+      <video src="6119475630666364910.mp4" controls>
   </body>
 </html>
