--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul style="list-style-type:disc">
          <dt>
            <li>Liên Minh Huyền Thoại</li>
-           <p><img src="https://photo2.tinhte.vn/data/attachment-files/2024/09/8449326_lol2-1692422783297148423145.jpg"></p>
+           <p><img src="https://photo2.tinhte.vn/data/attachment-files/2024/09/8449326_lol2-1692422783297148423145.jpg" width="300px" height="300px"></p>
          </dt>
       </ul>
       <li>Ca sĩ yêu thích và bài hát thích nhất</li>
