--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
       <ul style="list-style-type:disc">
          <dt>
            <li>Liên Minh Huyền Thoại</li>
-           <p><img src="https://photo2.tinhte.vn/data/attachment-files/2024/09/8449326_lol2-1692422783297148423145.jpg" width="300px" height="300px"></p>
+           <p><img src="https://photo2.tinhte.vn/data/attachment-files/2024/09/8449326_lol2-1692422783297148423145.jpg" width="500px" height="300px"></p>
          </dt>
       </ul>
       <li>Ca sĩ yêu thích và bài hát thích nhất</li>
       <ul style="list-style-type:disc">
       <dt>
         <li><a href="https://vi.wikipedia.org/wiki/V%C5%A9_(ca_s%C4%A9)">Vũ.</a></li>
+        <p><img src="https://avatar-ex-swe.nixcdn.com/singer/avatar/2024/09/26/M/6/m/F/1727345194543.png></p>
         <li><a href="https://www.youtube.com/watch?v=h6RONxjPBf4">Những lời hứa bỏ quên</a></li>
       </dt>
       </ul>
