--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <ul style="list-style-type:disc">
       <dt>
         <li><a href="https://vi.wikipedia.org/wiki/V%C5%A9_(ca_s%C4%A9)">Vũ.</a></li>
-        <p><img src="https://avatar-ex-swe.nixcdn.com/singer/avatar/2024/09/26/M/6/m/F/1727345194543.png></p>
+        <p><img src="https://avatar-ex-swe.nixcdn.com/singer/avatar/2024/09/26/M/6/m/F/1727345194543.png"></p>
         <li><a href="https://www.youtube.com/watch?v=h6RONxjPBf4">Những lời hứa bỏ quên</a></li>
       </dt>
       </ul>
