--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            <p><img src="https://photo2.tinhte.vn/data/attachment-files/2024/09/8449326_lol2-1692422783297148423145.jpg" width="500px" height="300px"></p>
          </dt>
       </ul>
-      <li>Ca sĩ yêu thích và bài hát thích nhất</li>
+      <li style="color:blue">Ca sĩ yêu thích và bài hát thích nhất</li>
       <ul style="list-style-type:disc">
       <dt>
         <li><a href="https://vi.wikipedia.org/wiki/V%C5%A9_(ca_s%C4%A9)">Vũ.</a></li>
@@ -31,7 +31,7 @@
         <li><a href="https://www.youtube.com/watch?v=h6RONxjPBf4">Những lời hứa bỏ quên</a></li>
       </dt>
       </ul>
-      <li>Video cảm thấy hay nhất</li>
+      <li style="color:pink">Video cảm thấy hay nhất</li>
       <video src="6119475630666364910.mp4" controls>
   </body>
 </html>
