--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       </dt>
       </ul>
       <li style="color:pink">Video cảm thấy hay nhất</li>
-      <video src="6119475630666364910.mp4" width="200px" height="200px controls>
+      <video src="6119475630666364910.mp4" width="200px" height="200px" controls>
   </body>
 </html>
